--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="C◎PETree. Only 3333 of them. Each C◎PETree == 100 tree on ground. First to mint with $COPE. Royalties 33% to buyers, 33% to holders."
+      content="Gen-2 SolanaDogeNFTs. Only 2500 of them."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>C◎PETree</title>
+    <title>Gen-2 Solana Doge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
